k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myvisa-web
  namespace: myvisa
  labels:
    app: myvisa-web
spec:
  type: ClusterIP
  selector:
    app: myvisa-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
